# LatexToWord

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: python-publish.yml
example/: example01.py  example02.py
src/: setup.py
src/latex2word/: __init__.py  convert.py  handler.py
src/latex2word.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_latex2word.py
